[package]
name = "mopa-revised"
version = "0.2.2"
authors = ["David Lin <davll.xc@gmail.com>", "Chris Morgan <me@chrismorgan.info>"]
description = "My Own Personal Any: get your own Any with additional functionality"
repository = "https://github.com/davll/mopa-revised"
readme = "README.md"
keywords = ["any", "macro"]
license = "MIT/Apache-2.0"

[features]
std = []
no_std_examples = []
default = ["std"]
